@@ -33,6 +33,8 @@ sub LaTeX_ToUnicode_convert_hook {
 
   # these take arguments
   $string =~ s/\\acro$endcw//g;
+  # use entity because we want to be able to search for literal \
+  # to find untranslated TeX source:
   $string =~ s,\\cs$endcw\{(.*?)\},<tt>&#x5c;$1</tt>,g;
   
   # no arguments
