@@ -1,3 +1,7 @@
+2021-02-02  Karl Berry  <karl@freefriends.org>
+
+	* capcrossref.pl (crossref_create_landing_page): format tweaks.
+
 2021-01-25  Karl Berry  <karl@freefriends.org>
 
 	* capcrossref.pl (crossref_create_landing_page): tub info in header.
